--- a/LearningWPF/packages.config
+++ b/LearningWPF/packages.config
@@ -27,6 +27,7 @@
   <package id="Microsoft.Extensions.Options" version="3.1.25" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.25" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="SharpVectors" version="1.8.1" targetFramework="net472" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.4" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="2.0.4" targetFramework="net48" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.4" targetFramework="net48" />
